src/app/layout/sidebar/sidebar.component.scss
md-sidenav {
  width: 256px;
  background-color: inherit !important;
}

md-sidenav ul {
  list-style-type: none;
  padding: 0;
}

/* Since we have the toolbar over the sidenav, we need to give it 100% height minus the toolbar's height. */
.sidenav-height {
  height: calc(100% - 64px);
}

@media screen and (max-width: 600px) {
  /* The toolbar shrinks to 56px at this breakpoint, need to update the sidenav height in that case. */
  .sidenav-height {
    height: calc(100% - 56px);
  }
}

.nav-item-container {
  align-items: center;
  color: #666;
  cursor: pointer;
  display: flex;
  font-size: 16px;
  font-weight: 500;
  height: 48px;
  line-height: 24px;
  outline: none;
  overflow: hidden;
  padding: 0;
  text-decoration: none;
  white-space: nowrap;
}

.nav-item-container:hover {
  background-color: #ddd;
}

.nav-item-container i {
  color: #666;
  margin-left: 26px;
  margin-right: 30px;
}

.nav-section-divider {
  border-bottom: 1px solid #dedede;
  margin: 12px 0;
}

.active {
  background-color: #ddd;
}

